# Projet-2

./: .env.example  .gitignore  .gitleaks.toml  CHECKLIST.md  DELIVERABLES.md  GITHUB_SECRETS.md  Makefile  Projet_2_Orchestration.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md  codecov.yml  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  docs.yml  security.yml
app_api/: Dockerfile  README.md  main.py  pyproject.toml
app_api/data/: moncsv.csv
app_api/maths/: __init__.py  mon_module.py
app_api/models/: __init__.py  models.py
app_api/modules/: __init__.py  connect.py  crud.py
app_api/tests/: __init__.py  test_api.py  test_math_csv.py
app_front/: Dockerfile  README.md  main.py  pyproject.toml
app_front/.streamlit/: config.toml
app_front/pages/: 0_insert.py  1_read.py
docs/: conf.py  configuration.rst  environment.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: configuration.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/doctrees/architecture/: backend.doctree  database.doctree  frontend.doctree  overview.doctree
docs/_build/doctrees/deliverables/: overview.doctree  technical.doctree
docs/_build/doctrees/deployment/: cicd.doctree  docker.doctree  production.doctree  secrets.doctree
docs/_build/doctrees/guides/: checklist.doctree  contributing.doctree  troubleshooting.doctree
docs/_build/doctrees/testing/: coverage.doctree  linting.doctree  tests.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  configuration.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/architecture/: backend.rst.txt  frontend.rst.txt  overview.rst.txt
docs/_build/html/_sources/deliverables/: overview.rst.txt
docs/_build/html/_sources/deployment/: cicd.rst.txt  production.rst.txt
docs/_build/html/_sources/guides/: contributing.rst.txt
docs/_build/html/_sources/testing/: coverage.rst.txt  linting.rst.txt
docs/_build/html/architecture/: backend.html  database.html  frontend.html  overview.html
docs/_build/html/deliverables/: overview.html  technical.html
docs/_build/html/deployment/: cicd.html  docker.html  production.html  secrets.html
docs/_build/html/guides/: checklist.html  contributing.html  troubleshooting.html
docs/_build/html/testing/: coverage.html  linting.html  tests.html
docs/architecture/: database.rst
docs/deliverables/: overview.rst  technical.rst
docs/deployment/: cicd.rst  codecov.rst  docker.rst  secrets.rst
docs/guides/: checklist.rst  troubleshooting.rst
docs/testing/: tests.rst
scripts/: README.md  deploy.ps1  logs.ps1  start.ps1  stop.ps1  test.ps1  view-docs.ps1
tests/: test_api.py  test_coverage.py  test_delete.py
