[project]
name = "projet2-orchestration"
version = "1.0.0"
description = "Projet 2 - Orchestration, Sécurité et Livraison Continue"
authors = [
    {name = "Projet 2", email = "projet2@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    # Backend (API)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    # Frontend
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    # Tests et Qualité
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
docs = [
    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Pas de package à construire, juste installer les dépendances
packages = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "N806",  # Variable in function should be lowercase
]
