[project]
name = "app-front"
version = "1.0.0"
description = "Frontend Streamlit pour la gestion de données"
authors = [
    {name = "Projet 2", email = "projet2@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "W293",  # Blank line contains whitespace (in multiline strings)
    "E722",  # Bare except (acceptable for simple error handling)
]
